Moved gps position logic to model. Added `explore venue` page.

--- a/src/template/drawer.html
+++ b/src/template/drawer.html
@@ -6,6 +6,7 @@
     <ul>
       <li><a href="#recent">Recent checkins</a></li>
       <li><a href="#search">Search venue</a></li>
+      <li><a href="#explore">Explore venue</a></li>
     </ul>
   </div>
 </nav>
